Fix line breaks in description while editing.

--- a/app/client/styles/main.less
+++ b/app/client/styles/main.less
@@ -225,7 +225,7 @@ a {
     }
   }
 
-  p:not(.no-linebreaks) br {
+  &.not-in-editmode p:not(.no-linebreaks) br {
     display: block;
     margin-top: 5px;
   }
